--- a/tests/cassettes/test_user_api_keys.yaml
+++ b/tests/cassettes/test_user_api_keys.yaml
@@ -145,7 +145,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - ece79f32632b84b4e2aac2a20007ed90
+      - 3b4deb916331fdf9e788e9e8003b045c
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -153,12 +153,12 @@ interactions:
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
+      - intlb2nuq 29913d444b
       - extlb1nuq 29913d444b
       x-runtime:
-      - '0.397422'
+      - '0.350243'
       x-version-label:
-      - easypost-202209212025-b1bc460ca8-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -235,25 +235,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - ece79f32632b84b4e2aac2a20007edb2
+      - 3b4deb916331fdf9e788e9e8003b0491
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb7nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq 29913d444b
       - extlb1nuq 29913d444b
       x-runtime:
-      - '0.040576'
+      - '0.049619'
       x-version-label:
-      - easypost-202209212025-b1bc460ca8-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
