--- a/tests/cassettes/test_address_all.yaml
+++ b/tests/cassettes/test_address_all.yaml
@@ -16,51 +16,51 @@ interactions:
     uri: https://api.easypost.com/v2/addresses?page_size=5
   response:
     body:
-      string: '{"addresses": [{"id": "adr_204a34f339c711ed969bac1f6bc7b362", "object":
-        "Address", "created_at": "2022-09-21T16:04:52+00:00", "updated_at": "2022-09-21T16:04:52+00:00",
+      string: '{"addresses": [{"id": "adr_51cb44133dd011ed814eac1f6bc72124", "object":
+        "Address", "created_at": "2022-09-26T19:20:45+00:00", "updated_at": "2022-09-26T19:20:45+00:00",
         "name": "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
         null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, {"id": "adr_2048778739c711ed9699ac1f6bc7b362", "object": "Address", "created_at":
-        "2022-09-21T16:04:52+00:00", "updated_at": "2022-09-21T16:04:53+00:00", "name":
+        {}}, {"id": "adr_51c9fdf63dd011edaa80ac1f6bc7bdc6", "object": "Address", "created_at":
+        "2022-09-26T19:20:45+00:00", "updated_at": "2022-09-26T19:20:45+00:00", "name":
         "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
         null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": true, "federal_tax_id": null, "state_tax_id": null, "verifications":
         {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
         true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
-        "time_zone": "America/Los_Angeles"}}}}, {"id": "adr_202c974939c711ed84d1ac1f6bc72124",
-        "object": "Address", "created_at": "2022-09-21T16:04:51+00:00", "updated_at":
-        "2022-09-21T16:04:51+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        "time_zone": "America/Los_Angeles"}}}}, {"id": "adr_517e95573dd011edbfc5ac1f6bc72124",
+        "object": "Address", "created_at": "2022-09-26T19:20:44+00:00", "updated_at":
+        "2022-09-26T19:20:44+00:00", "name": "Elizabeth Swan", "company": null, "street1":
         "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
         "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
         "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
-        null, "state_tax_id": null, "verifications": {}}, {"id": "adr_202b044739c711ed84d0ac1f6bc72124",
-        "object": "Address", "created_at": "2022-09-21T16:04:51+00:00", "updated_at":
-        "2022-09-21T16:04:52+00:00", "name": "JACK SPARROW", "company": null, "street1":
+        null, "state_tax_id": null, "verifications": {}}, {"id": "adr_517d63813dd011edb59bac1f6bc7b362",
+        "object": "Address", "created_at": "2022-09-26T19:20:44+00:00", "updated_at":
+        "2022-09-26T19:20:45+00:00", "name": "JACK SPARROW", "company": null, "street1":
         "388 TOWNSEND ST APT 20", "street2": null, "city": "SAN FRANCISCO", "state":
         "CA", "zip": "94107-1670", "country": "US", "phone": "<REDACTED>", "email":
         "<REDACTED>", "mode": "test", "carrier_facility": null, "residential": true,
         "federal_tax_id": null, "state_tax_id": null, "verifications": {"zip4": {"success":
         true, "errors": [], "details": null}, "delivery": {"success": true, "errors":
         [], "details": {"latitude": 37.77551, "longitude": -122.39697, "time_zone":
-        "America/Los_Angeles"}}}}, {"id": "adr_89a61f2e39c511edaf31ac1f6b0a0d1e",
-        "object": "Address", "created_at": "2022-09-21T15:53:29+00:00", "updated_at":
-        "2022-09-21T15:53:29+00:00", "name": null, "company": null, "street1": "invalid",
-        "street2": null, "city": null, "state": null, "zip": null, "country": "US",
-        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
-        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}], "has_more": true}'
+        "America/Los_Angeles"}}}}, {"id": "adr_4b47b2fc3dd011edb78aac1f6b0a0d1e",
+        "object": "Address", "created_at": "2022-09-26T19:20:34+00:00", "updated_at":
+        "2022-09-26T19:20:34+00:00", "name": "Elizabeth Swan", "company": null, "street1":
+        "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
+        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
+        "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
+        null, "state_tax_id": null, "verifications": {}}], "has_more": true}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '2653'
+      - '2709'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"c5adc9f9c3b6cda15ba07a5a2b527e86"
+      - W/"8834dd874b0a3874a051e65b004621c3"
       expires:
       - '0'
       pragma:
@@ -78,20 +78,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - d25912fc632b841fe2aabe6000066945
+      - 3b4deb946331fda9e788e97f003adde4
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq 29913d444b
-      - extlb2nuq 29913d444b
+      - extlb1nuq 29913d444b
       x-runtime:
-      - '0.036447'
+      - '0.033202'
       x-version-label:
-      - easypost-202209212025-b1bc460ca8-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
