--- a/tests/cassettes/test_address_verify_invalid_address.yaml
+++ b/tests/cassettes/test_address_verify_invalid_address.yaml
@@ -20,8 +20,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id": "adr_89a61f2e39c511edaf31ac1f6b0a0d1e", "object": "Address",
-        "created_at": "2022-09-21T15:53:29+00:00", "updated_at": "2022-09-21T15:53:29+00:00",
+      string: '{"id": "adr_42e81a9e3dd011edb512ac1f6bc72124", "object": "Address",
+        "created_at": "2022-09-26T19:20:20+00:00", "updated_at": "2022-09-26T19:20:20+00:00",
         "name": null, "company": null, "street1": "invalid", "street2": null, "city":
         null, "state": null, "zip": null, "country": "US", "phone": "<REDACTED>",
         "email": "<REDACTED>", "mode": "test", "carrier_facility": null, "residential":
@@ -34,11 +34,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"37db4a55948a5c709233448d59a368c8"
+      - W/"c05d89565c2835188f116e785552c71f"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_89a61f2e39c511edaf31ac1f6b0a0d1e
+      - /api/v2/addresses/adr_42e81a9e3dd011edb512ac1f6bc72124
       pragma:
       - no-cache
       referrer-policy:
@@ -54,21 +54,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3400fe8b632b3379e2b86f160013558f
+      - 20a8e4aa6331fb74e788d941003a2c49
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 29913d444b
-      - intlb2wdc 29913d444b
-      - extlb4wdc 29913d444b
+      - intlb1nuq 29913d444b
+      - extlb2nuq 29913d444b
       x-runtime:
-      - '0.049916'
+      - '0.027875'
       x-version-label:
-      - easypost-202209210008-610ad55e3f-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -88,7 +87,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/addresses/adr_89a61f2e39c511edaf31ac1f6b0a0d1e/verify
+    uri: https://api.easypost.com/v2/addresses/adr_42e81a9e3dd011edb512ac1f6bc72124/verify
   response:
     body:
       string: '{"error": {"code": "ADDRESS.VERIFY.FAILURE", "message": "Unable to
@@ -119,21 +118,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3400fe8b632b337ae2b86f16001355aa
+      - 20a8e4aa6331fb74e788d941003a2c55
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - intlb1wdc 29913d444b
-      - extlb4wdc 29913d444b
+      - intlb2nuq 29913d444b
+      - extlb2nuq 29913d444b
       x-runtime:
-      - '0.040864'
+      - '0.040416'
       x-version-label:
-      - easypost-202209210008-610ad55e3f-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
