--- a/tests/cassettes/test_batch_buy.yaml
+++ b/tests/cassettes/test_batch_buy.yaml
@@ -27,9 +27,9 @@ interactions:
     uri: https://api.easypost.com/v2/batches
   response:
     body:
-      string: '{"id": "batch_88f06c11fa0640f99214e88f73adb10c", "object": "Batch",
+      string: '{"id": "batch_253f17d4900e4f25b4af1a76dd100dc4", "object": "EasyPost::Entity::Batch",
         "mode": "test", "state": "creating", "num_shipments": 1, "reference": null,
-        "created_at": "2022-08-15T18:51:22Z", "updated_at": "2022-08-15T18:51:22Z",
+        "created_at": "2022-09-26T19:20:44Z", "updated_at": "2022-09-26T19:20:44Z",
         "scan_form": null, "shipments": [], "status": {"created": 0, "queued_for_purchase":
         0, "creation_failed": 0, "postage_purchased": 0, "postage_purchase_failed":
         0}, "pickup": null, "label_url": null}'
@@ -37,11 +37,11 @@ interactions:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '384'
+      - '402'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"6b03657fae28c5ab040a24321e5ed6d9"
+      - W/"2675478e0e1fc3bfe3ebd8bd53c339e5"
       expires:
       - '0'
       pragma:
@@ -59,20 +59,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa95aae79a768b00261a84
+      - 20a8e4aa6331fb8ce788d946003a3701
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq 29913d444b
+      - extlb2nuq 29913d444b
       x-runtime:
-      - '0.039081'
+      - '0.049205'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -96,14 +96,14 @@ interactions:
       user-agent:
       - <REDACTED>
     method: POST
-    uri: https://api.easypost.com/v2/batches/batch_88f06c11fa0640f99214e88f73adb10c/buy
+    uri: https://api.easypost.com/v2/batches/batch_253f17d4900e4f25b4af1a76dd100dc4/buy
   response:
     body:
-      string: '{"id": "batch_88f06c11fa0640f99214e88f73adb10c", "object": "Batch",
+      string: '{"id": "batch_253f17d4900e4f25b4af1a76dd100dc4", "object": "Batch",
         "mode": "test", "state": "created", "num_shipments": 1, "reference": null,
-        "created_at": "2022-08-15T18:51:22Z", "updated_at": "2022-08-15T18:51:22Z",
+        "created_at": "2022-09-26T19:20:44Z", "updated_at": "2022-09-26T19:20:44Z",
         "scan_form": null, "shipments": [{"batch_status": "queued_for_purchase", "batch_message":
-        null, "reference": null, "tracking_code": null, "id": "shp_84c6ae8a1119411d9fbde7618445aae0"}],
+        null, "reference": null, "tracking_code": null, "id": "shp_4a2455684c524a05b7e04a03af71b704"}],
         "status": {"created": 1, "queued_for_purchase": 0, "creation_failed": 0, "postage_purchased":
         0, "postage_purchase_failed": 0}, "pickup": null, "label_url": null}'
     headers:
@@ -114,7 +114,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"d7b2593fba1a33f7de9e1466dec853b1"
+      - W/"e8b33d952f7486b1aa7c11d52305e167"
       expires:
       - '0'
       pragma:
@@ -132,20 +132,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47962fa95aae79a768b00261a92
+      - 20a8e4aa6331fb8ce788d946003a3711
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq 29913d444b
+      - extlb2nuq 29913d444b
       x-runtime:
-      - '0.066650'
+      - '0.079093'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
