--- a/tests/cassettes/test_batch_create_scanform.yaml
+++ b/tests/cassettes/test_batch_create_scanform.yaml
@@ -27,9 +27,9 @@ interactions:
     uri: https://api.easypost.com/v2/batches
   response:
     body:
-      string: '{"id": "batch_94e77208f7214d6ab273520bfef08eef", "object": "Batch",
+      string: '{"id": "batch_88266823824049bcbdb29ba2324a7ab9", "object": "EasyPost::Entity::Batch",
         "mode": "test", "state": "creating", "num_shipments": 1, "reference": null,
-        "created_at": "2022-08-15T18:51:23Z", "updated_at": "2022-08-15T18:51:23Z",
+        "created_at": "2022-09-26T19:20:45Z", "updated_at": "2022-09-26T19:20:45Z",
         "scan_form": null, "shipments": [], "status": {"created": 0, "queued_for_purchase":
         0, "creation_failed": 0, "postage_purchased": 0, "postage_purchase_failed":
         0}, "pickup": null, "label_url": null}'
@@ -37,11 +37,11 @@ interactions:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '384'
+      - '402'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"11d89d3efe883b82fab11c30a9ba96d6"
+      - W/"466b28f9e9710ffc4859768fad62ba31"
       expires:
       - '0'
       pragma:
@@ -59,20 +59,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95abe79a768c00261aaf
+      - 20a8e4ae6331fb8de788d947003a3733
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb5nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq 29913d444b
+      - extlb2nuq 29913d444b
       x-runtime:
-      - '0.036399'
+      - '0.057657'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -96,14 +96,14 @@ interactions:
       user-agent:
       - <REDACTED>
     method: POST
-    uri: https://api.easypost.com/v2/batches/batch_94e77208f7214d6ab273520bfef08eef/buy
+    uri: https://api.easypost.com/v2/batches/batch_88266823824049bcbdb29ba2324a7ab9/buy
   response:
     body:
-      string: '{"id": "batch_94e77208f7214d6ab273520bfef08eef", "object": "Batch",
+      string: '{"id": "batch_88266823824049bcbdb29ba2324a7ab9", "object": "Batch",
         "mode": "test", "state": "created", "num_shipments": 1, "reference": null,
-        "created_at": "2022-08-15T18:51:23Z", "updated_at": "2022-08-15T18:51:23Z",
+        "created_at": "2022-09-26T19:20:45Z", "updated_at": "2022-09-26T19:20:45Z",
         "scan_form": null, "shipments": [{"batch_status": "queued_for_purchase", "batch_message":
-        null, "reference": null, "tracking_code": null, "id": "shp_12245f976b164c7fa2afbbfccd6b9089"}],
+        null, "reference": null, "tracking_code": null, "id": "shp_b36bf7794dd4489dae7e49c7f888ff87"}],
         "status": {"created": 1, "queued_for_purchase": 0, "creation_failed": 0, "postage_purchased":
         0, "postage_purchase_failed": 0}, "pickup": null, "label_url": null}'
     headers:
@@ -114,7 +114,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"422c56f0aafebd230eeca14890bc0eb0"
+      - W/"5ef94e4b0ed5843e15dda9d7cd6fccef"
       expires:
       - '0'
       pragma:
@@ -132,20 +132,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95abe79a768c00261ab8
+      - 20a8e4ae6331fb8de788d947003a3740
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq 29913d444b
+      - extlb2nuq 29913d444b
       x-runtime:
-      - '0.051799'
+      - '0.066471'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -169,30 +169,30 @@ interactions:
       user-agent:
       - <REDACTED>
     method: POST
-    uri: https://api.easypost.com/v2/batches/batch_94e77208f7214d6ab273520bfef08eef/scan_form
+    uri: https://api.easypost.com/v2/batches/batch_88266823824049bcbdb29ba2324a7ab9/scan_form
   response:
     body:
-      string: '{"id": "batch_94e77208f7214d6ab273520bfef08eef", "object": "Batch",
+      string: '{"id": "batch_88266823824049bcbdb29ba2324a7ab9", "object": "Batch",
         "mode": "test", "state": "purchased", "num_shipments": 1, "reference": null,
-        "created_at": "2022-08-15T18:51:23Z", "updated_at": "2022-08-15T18:51:28Z",
-        "scan_form": {"id": "sf_f68130fadb384b9c9aee1b580e35cc6c", "object": "ScanForm",
-        "created_at": "2022-08-15T18:51:28Z", "updated_at": "2022-08-15T18:51:28Z",
-        "tracking_codes": [], "address": null, "status": "creating", "message": null,
-        "form_url": null, "form_file_type": null, "batch_id": "batch_94e77208f7214d6ab273520bfef08eef",
+        "created_at": "2022-09-26T19:20:45Z", "updated_at": "2022-09-26T19:20:50Z",
+        "scan_form": {"id": "sf_4cd8b58e388543e9a0ebd5a3b4d9da45", "object": "ScanForm",
+        "created_at": "2022-09-26T19:20:50Z", "updated_at": "2022-09-26T19:20:50Z",
+        "tracking_codes": [], "address": null, "status": "creating", "message": "Scheduling
+        batch scanform", "form_url": null, "form_file_type": null, "batch_id": "batch_88266823824049bcbdb29ba2324a7ab9",
         "confirmation": null}, "shipments": [{"batch_status": "postage_purchased",
-        "batch_message": null, "reference": null, "tracking_code": "9400100109361133189175",
-        "id": "shp_12245f976b164c7fa2afbbfccd6b9089"}], "status": {"created": 0, "queued_for_purchase":
+        "batch_message": null, "reference": null, "tracking_code": "9400100109361139555493",
+        "id": "shp_b36bf7794dd4489dae7e49c7f888ff87"}], "status": {"created": 0, "queued_for_purchase":
         0, "creation_failed": 0, "postage_purchased": 1, "postage_purchase_failed":
         0}, "pickup": null, "label_url": null}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '856'
+      - '879'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"afcb3ee2fc465b98ad2535208ea7c137"
+      - W/"e7700646a8eb526aad9fd02b0f31ae0e"
       expires:
       - '0'
       pragma:
@@ -210,20 +210,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47e62fa95b0e79a768c00261c7e
+      - 20a8e4ae6331fb92e788d947003a3923
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq 29913d444b
+      - extlb2nuq 29913d444b
       x-runtime:
-      - '0.060858'
+      - '0.067892'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202209261717-03ecd81b73-master
       x-xss-protection:
       - 1; mode=block
     status:
